--- a/index.html
+++ b/index.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width">
-<meta name="description" content="Alphabet">
-<meta name="Keywords" content="Four essential Skills in Language Learning">
-<meta name="author" content="Anayka Ramos">
-<title>ESL FUN!</title>
-<link rel= "stylesheet" href="./css/styles.css">
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/styles.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<title>Airbnb website</title>
 </head>
+
 <body>
+
+  <nav class="navbar navbar-default navbar-fixed top">
+    <div class="container">
+    <div class="navbar-header">
+      <a href="" class="navbar-brand">ESL Fun</a>
+    </div>
+    <ul class="nav navbar-nav navbar-right">
+    <li class="active"><a href="https://www.google”><span class="glyphicon glyphicon-home"></span> Home</a></li>
+    <li><a href="https://www.google.com”><span class="glyphicon glyphicon-list"></span> about</a></li>
+    <li><a href="#"><span class="glyphicon glyphicon-fire"></span> Sign up</a></li>
+    <li><a href="#"><span class="glyphicon glyphicon-question-sign"></span> Log in</a></li>
+    </ul>
+    </div>
+    </nav>
+
 <header>
 <div class="container">
 <div id="branding">
