--- a/index.html
+++ b/index.html
@@ -42,6 +42,16 @@
 </nav>
 </div>
 </header>
+ <!-- Hi Anayka, your Text on the background of the home page is a bit messy, can not see clearly. I suggest you use simple text, then create a link and display the text on another page. Or you can change a picture. -->
+ <!-- <div class="navbar-collapse>
+ <ul class="nav navbar-nav navbar-right">
+ 					<li><a href="index.html"  active">Home</a></li>
+ 					<li><a href="#about" scroll">About Us</a></li>
+          <li><a href=“#services” scroll">Services</a></li>
+ </ul>
+ </div> -->
+
+
 <section id="showcase">
   <div class="container">
     <h1>Four Essential Skills in Language Learning</h1>
